# Quick-Kopy

./: .gitignore  README.md  default.json  default_data.py  nu_main.pyw  pyproject.toml  quick_kopy.spec  releases.md  system_data.pyw  user.json
quick_kopy/: config.py  main.pyw  nu_main.pyw  user.json
quick_kopy/data/: default.json  user.json
